--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,54 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import "tailwindcss";
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: Rubik;
+  src: url("assets/fonts/Rubik.ttf") format("truetype-variations");
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+@font-face {
+  font-family: PixelifySans;
+  src: url("assets/fonts/PixelifySans.ttf") format("truetype-variations");
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+@theme {
+  --font-rubik: "Rubik";
+  --font-pixelify: "PixelifySans";
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+  --animate-flip-coin: flip-coin 1s forwards;
+  --animate-unflip-coin: unflip-coin 1s forwards;
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+  @keyframes flip-coin {
+    from {
+      transform: rotateY(0deg);
+      content: url("/src/assets/images/tails.png");
+    }
+    to {
+      transform: rotateY(180deg);
+      content: url("/src/assets/images/heads.png");
+    }
   }
-  a:hover {
-    color: #747bff;
+
+  @keyframes unflip-coin {
+    from {
+      transform: rotateY(180deg);
+      content: url("/src/assets/images/heads.png");
+    }
+    to {
+      transform: rotateY(0deg);
+      content: url("/src/assets/images/tails.png");
+    }
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+@layer components {
+  #root {
+    @apply w-screen;
+    @apply h-screen;
+
+    @apply font-rubik;
+
+    @apply bg-[url('/src/assets/images/gradient.png')];
+    @apply bg-cover;
+    @apply bg-right;
   }
 }
